<resources>
    <string name="app_name">Attendance</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UID:</string>
    <string name="prompt_password">Password:</string>
    <string name="hint_promt_email">Enter your UID</string>
    <string name="hint_promt_password">Enter your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_me">Remember Me</string>


    <!-- String related to connect server -->
    <string name="connecting_server">Connecting . . .</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="connect_fail">Connect fail</string>
    <string name="connect_success">Connect success</string>
    <string name="ip_address">Ip Address:</string>
    <string name="ip_address_hint">xxx.xxx.xxx.xxx</string>
    <string name="port_hint">8080</string>
    <string name="colon">:</string>
    <string name="save_ip_address">Save Address</string>
    <string name="change_url"><u>Change Url</u></string>

    <!-- Strings related to main activity-->
    <string name="attend">Danh sách lớp trong ngày</string>
    <string name="attend_verb">Điểm danh</string>
    <string name="subject_list">Danh sách môn học</string>
    <string name="student_list">Student list</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="class_list">Dánh sách lớp trong hôm nay</string>

    <!-- Strings related to search toolbar-->
    <string name="hint_search">Search Subjects. . .</string>
    <string name="hint_term">Term</string>
    <string name="hint_year">Year</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hyphen"> - </string>

    <!-- Camera Vision-->
    <string name="grayscale">1. Grayscale</string>
    <string name="crop">Crop</string>
    <string name="eyeAlignment">2. Eye Alignment</string>
    <string name="gammaCorrection">1. Gamma Correction</string>
    <string name="doG">1. Difference of Gaussian</string>
    <string name="masking">2. Masking</string>
    <string name="lbp">3. Local Binary Pattern</string>
    <string name="histogrammEqualization">1. Histogramm Equalization</string>
    <string name="resize">1. Resize</string>

    <string name="eigenfaces">Eigenfaces with NN</string>
    <string name="imageReshaping">Image Reshaping with SVM</string>
    <string name="caffe">Caffe with SVM or KNN</string>
    <string name="tensorflow">TensorFlow with SVM or KNN</string>

    <string name="knn">K Nearest Neighbor</string>
    <string name="svm">Support Vector Machine</string>

    <string name="modelFileCaffe">VGG_FACE_deploy.prototxt</string>
    <string name="weightsFileCaffe">VGG_FACE.caffemodel</string>
    <string name="outputLayerCaffe">fc7</string>
    <string name="meanValuesCaffe">104, 117, 123</string>

    <string name="gamma">0.2</string>
    <string name="sigmas">0.25,4</string>

    <string name="haarcascade_default">haarcascade_frontalface_default</string>
    <string name="haarcascade_alt">haarcascade_frontalface_alt</string>
    <string name="haarcascade_alt2">haarcascade_frontalface_alt2</string>
    <string name="lbpcascade">lbpcascade_frontalface</string>
    <string name="classifier_350kids">02_Classifier_350kids</string>
    <string name="classifier_200adults_350kids">01_Classifier_200adults_350kids</string>

    <string name="haarcascade_eye">haarcascade_eye</string>
    <string name="haarcascade_lefteye">haarcascade_lefteye_2splits</string>
    <string name="haarcascade_righteye">haarcascade_righteye_2splits</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
