<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vm"
            type="com.example.pc.attendance.viewModels.LoginVM"/>
    </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.pc.attendance.views.LoginActivity"
        android:background="@drawable/learn"
        android:theme="@style/NoActionBar">
        <GridLayout
            android:layout_centerInParent="true"
            android:columnCount="3"
            android:rowCount="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="monospace"
                android:textSize="@dimen/activity_label_size_medium"
                android:text="@string/prompt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGreen"/>

            <EditText
                android:text="@={vm.user.username}"
                android:layout_columnSpan="2"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/hint_promt_email"/>

            <TextView
                android:fontFamily="monospace"
                android:textSize="@dimen/activity_label_size_medium"
                android:text="@string/prompt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGreen"/>

            <EditText
                android:text="@={vm.user.password}"
                android:layout_columnSpan="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:password="true"
                android:fontFamily="monospace"
                android:hint="@string/hint_promt_password"/>

            <TextView
                android:visibility="gone"
                android:text=""
                android:layout_columnSpan="3"
                android:textColor="@color/colorErrorText"
                />

            <CheckBox
                android:checked="@={vm.rememberMe}"
                android:text="@string/remember_me"
                android:layout_gravity="right"
                android:layout_columnSpan="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGreen"
                />

            <Button
                android:onClick="@{(v)->vm.onLogin()}"
                android:theme="@style/PrimaryFlatButton"
                android:layout_columnSpan="3"
                android:layout_gravity="center"
                android:text="@string/action_sign_in_short"
                android:drawableRight="@drawable/ic_login"/>
        </GridLayout>
    </RelativeLayout>
</layout>